[package]
name = "orzo"
version = "0.1.0"
edition = "2021"
authors = ["Filip Nowak <filipn924@gmail.com>"]
description = "A tool to copy file contents from a directory to clipboard"
license = "MIT"
repository = "https://github.com/fibleep/orzo"
readme = "README.md"
keywords = ["clipboard", "files", "utility"]
categories = ["command-line-utilities"]

[dependencies]
clipboard = "0.5.0"
walkdir = "2.3.3"
